fixed overflow hidden not work on mobile

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ nav {
 
 
 @media screen and (max-width: 768px) {
-    body {
+    body, html {
         overflow-x: hidden; 
     }
 
